# bug-tracker-service

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 784f4fb8f4ce_initial_migration.py
docker/: Dockerfile  Dockerfile.dev
docker/nginx/: nginx.conf
docs/: COMPLETE_GUIDE.md
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secrets.yaml  service.yaml
k8s/postgres/: statefulset.yaml
scripts/: generate_keys.py  seed_data.py
src/app/: __init__.py  main.py
src/app/api/: deps.py
src/app/api/v1/: auth.py  comments.py  issues.py  projects.py  router.py
src/app/config/: settings.py
src/app/core/: __init__.py  database.py  exceptions.py  redis.py
src/app/core/security/: __init__.py  jwt.py  password.py  rate_limiter.py  token_blacklist.py
src/app/middleware/: __init__.py  audit_log.py  rate_limit.py  security_headers.py
src/app/models/: __init__.py  base.py  comment.py  enums.py  issue.py  project.py  user.py
src/app/permissions/: __init__.py  base.py  comment_permissions.py  issue_permissions.py  project_permissions.py
src/app/repositories/: __init__.py  base.py  comment_repository.py  issue_repository.py  project_repository.py  user_repository.py
src/app/schemas/: __init__.py  auth.py  base.py  comment.py  issue.py  project.py  user.py
src/app/services/: __init__.py  auth_service.py  comment_service.py  issue_service.py  project_service.py  user_service.py
tests/: conftest.py
tests/integration/: test_auth.py  test_projects.py
tests/unit/test_permissions/: test_project_permissions.py
tests/unit/test_services/: test_issue_service.py
